language/move-lang/tests/move_check/typing/type_variable_join_single_pack_invalid.exp
error: 

   ┌── tests/move_check/typing/type_variable_join_single_pack_invalid.move:5:27 ───
   │
 5 │         let b = Box { f1: false, f2: 1 };
   │                           ----- Is not compatible with: 'bool'
   │                                      - The type: integer
   │                                      ^ Invalid argument for field 'f2' for '0x8675309::M::Box'
   │

error: 

   ┌── tests/move_check/typing/type_variable_join_single_pack_invalid.move:6:28 ───
   │
 6 │         let b2 = Box { f1: Box { f1: 0, f2: 0 }, f2:  Box { f1: false, f2: false } };
   │                            -------------------- The type: integer
   │                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid argument for field 'f2' for '0x8675309::M::Box'
   │                                                                 ----- Is not compatible with: 'bool'
   │

